spacing fix again

--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@
 .swiper2{
     margin: 0 auto;
     margin-top: 50px;
-    width: 150%;
+    width: 100%;
     height: fit-content;
     justify-content: center;
 
